# flotilla

./: .pre-commit-config.yaml  Cargo.toml  synth.yaml
.github/workflows/: pre-commit.yml  publish.yml  tests.yml
src/: discovery.rs  main.rs  state.rs  table.rs  ui.rs
