[package]
name = "flotilla"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
itertools = "0.14.0"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["config", "client"] }
ratatui = "0.29.0"
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
