[package]
name = "flotilla"
version = "0.1.0"
edition = "2021"
description = "A TUI Kubernetes dashboard"
authors = ["Josh Karpel <josh.karpel@gmail.com>"]
readme = "README.md"
license = "MIT"
documentation = "https://github.com/JoshKarpel/flotilla"
homepage = "https://github.com/JoshKarpel/flotilla"
repository = "https://github.com/JoshKarpel/flotilla"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
http = "1.2.0"
itertools = "0.14.0"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["config", "client"] }
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
unicode-width = "0.2.0"

[dev-dependencies]
rstest = "0.25.0"
